--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="20">
-    <td>  <img src="img_3710.jpg" alt="Rob profile picture"></td>
+    <td>  <img src="IMG_3710.JPG" alt="Rob profile picture"></td>
     <td><h1>Rob Siemer</h1>
     <p><em>COO of <strong>Major</strong> Midwest Household</em></p>
     <p>I am a stay-at-home dad in St. Louis, Missouri. I have a degree from Truman State University. I have a wonderful wife, and two brilliant daughters who are learning to drive.</p></td>
